[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/Untitled-x.png" type="Texture" id=1]
[ext_resource path="res://Component/Box.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.6667, 10.6667 )

[node name="Node2D" type="Area2D"]
collision_layer = 4
input_pickable = false
script = ExtResource( 2 )

[node name="Untitled-x" type="Sprite" parent="."]
self_modulate = Color( 0.972549, 0.8, 0.501961, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.15256e-07, 0 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_Node2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Node2D_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Node2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Node2D_body_exited"]
